--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <a href="./index.html">Go back</a>
-    <script src="./js/2-form.js" type="module"></script>
+    <br />
+    <script src="./js/2-snackbar.js" type="module"></script>
   </body>
 </html>
