--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -9,6 +9,26 @@
   <body>
     <a href="./index.html">Go back</a>
     <br />
+    <form class="form">
+      <label>
+        Delay (ms)
+        <input type="number" name="delay" required />
+      </label>
+
+      <fieldset>
+        <legend>State</legend>
+        <label class="radio-label">
+          <input type="radio" name="state" value="fulfilled" required />
+          Fulfilled
+        </label>
+        <label class="radio-label">
+          <input type="radio" name="state" value="rejected" required />
+          Rejected
+        </label>
+      </fieldset>
+
+      <button type="submit">Create notification</button>
+    </form>
     <script src="./js/2-snackbar.js" type="module"></script>
   </body>
 </html>
